# Tovek

./: Dockerfile  FINDINGS.md  Progress.md  README.md  decompile-batch.client.luau  wrapper.py
ast/: Cargo.toml
ast/src/: copy_cleanup.rs  deinline.rs  eliminate_nil.rs  expr_deinline.rs  formatter.rs  lib.rs  local.rs  materialize_value_captures.rs  name_locals.rs  recover_dropped_connection.rs  simplify_gotos.rs  unary.rs
cfg/: Cargo.toml
cfg/src/ssa/: construct.rs  destruct.rs  structuring.rs  upvalues.rs
docs/: index.html
lua51-deserializer/: Cargo.toml
lua51-lifter/: Cargo.toml
luau-lifter/: Cargo.toml
luau-lifter/src/: lib.rs  lifter.rs
luau-lifter/tests/: closure_captured_local.rs
luau-lifter/tests/fixtures/: closure_captured_nil_init.luaubc
luau-worker/: Cargo.toml
luau-worker/src/: lib.rs
restructure/: Cargo.toml
restructure/src/: loop.rs
web-server/: Cargo.toml
web-server/src/: main.rs
