[package]
name = "luau-lifter"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.6"
nom = "7.1.0"
nom-leb128 = "0.2.0"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = { version = "1.0.53", features = ["backtrace"] }
cfg = { path = "../cfg" }
ast = { path = "../ast" }
rustc-hash = "1.1.0"
dhat = "0.3.1"
either = "1.6.1"
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch = "ensure_len_resize_with" }
restructure = { path = "../restructure" }
lazy_static = "1.4.0"
itertools = "0.10.5"
indexmap = "1.9.1"
by_address = "1.1.0"
rayon = "1.5.3"
triomphe = "0.1.8"
parking_lot = "0.12.1"
walkdir = "2.3.2"
base64 = "0.22.1"

# mimalloc (the binary's global allocator) builds C source and has no wasm32
# target, so it must NOT be pulled into the `luau-worker` wasm cdylib build that
# links this crate's library. Gating the dependency off wasm32 keeps it out of
# the wasm dependency graph entirely; the native binaries that use it
# (`luau-lifter`) are never built for wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.52"

[features]
dhat-heap = []
panic-handled = []