[package]
name = "web-server"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
default-run = "web-server"

[dependencies]
axum = "0.7"
base64 = "0.22"
luau-lifter = { path = "../luau-lifter" }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
